--- a/index.html
+++ b/index.html
@@ -28,48 +28,50 @@
         <div id="jsHeader" class="header">
             <div class="b8-container">
                 <a href="/" class="ir brand">某某网站logo</a>
-                <ul class="nav-list nav-list-pc hidden-xs fr">
-                    <li class="nav-list-item active">
-                        <a class="nav-link" href="#jsHome">首页</a>
+                <ul id="navListPc" class="nav-list nav-list-pc hidden-xs fr">
+                    <li class="nav-list-item">
+                        <a class="nav-link smoothScroll active" href="#home" name="link">首页</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-link" href="#keyIssues">核心问题</a>
+                        <a class="nav-link smoothScroll" href="#keyIssues" name="link">核心问题</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-link" href="#solution">解决方案</a>
+                        <a class="nav-link smoothScroll" href="#solution" name="link">解决方案</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-link" href="#about">关于我们</a>
+                        <a class="nav-link smoothScroll" href="#about" name="link">关于我们</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-link" href="#joinUs">加入社区</a>
+                        <a class="nav-link smoothScroll" href="#joinUs" name="link">加入社区</a>
                     </li>
                 </ul>
                 <div class="b8-row visible-xs">
-                    <a class="nav-menu" href="javascript:;">
-                        <div class="icon-menu">
-                            <div class="icon-bar"></div>
-                            <div class="icon-bar"></div>
-                            <div class="icon-bar"></div>
-                        </div>
-                    </a>
-                    <ul class="nav-list nav-list-phone">
-                        <li class="nav-list-item active">
-                            <a class="nav-link" href="#jsHome">首页</a>
-                        </li>
-                        <li class="nav-list-item">
-                            <a class="nav-link" href="#keyIssues">核心问题</a>
-                        </li>
-                        <li class="nav-list-item">
-                            <a class="nav-link" href="#solution">解决方案</a>
-                        </li>
-                        <li class="nav-list-item">
-                            <a class="nav-link" href="#about">关于我们</a>
-                        </li>
-                        <li class="nav-list-item">
-                            <a class="nav-link" href="#joinUs">加入社区</a>
-                        </li>
-                    </ul>
+                    <div class="nav-list-phone-wrap">
+                        <a class="nav-menu" href="javascript:;">
+                            <div class="icon-menu">
+                                <div class="icon-bar"></div>
+                                <div class="icon-bar"></div>
+                                <div class="icon-bar"></div>
+                            </div>
+                        </a>
+                        <ul id="navListPhone" class="nav-list nav-list-phone">
+                            <li class="nav-list-item active">
+                                <a class="nav-link" href="#home" name="link">首页</a>
+                            </li>
+                            <li class="nav-list-item">
+                                <a class="nav-link" href="#keyIssues" name="link">核心问题</a>
+                            </li>
+                            <li class="nav-list-item">
+                                <a class="nav-link" href="#solution" name="link">解决方案</a>
+                            </li>
+                            <li class="nav-list-item">
+                                <a class="nav-link" href="#about" name="link">关于我们</a>
+                            </li>
+                            <li class="nav-list-item">
+                                <a class="nav-link" href="#joinUs" name="link">加入社区</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,7 +79,7 @@
 
         <!-- 首屏 -->
         <div id="jsHome" class="section-part section-part-home">
-            <div class="content-wrap">
+            <div id="home" class="content-wrap">
                 <div class="text-wrap">
                     <h1 class="text-top wow fadeInDownBig">MAKE MONEY</h1>
                     <h1 class="text-bottom wow fadeInUp" data-wow-delay="1s">币8区块链专业数据团队，用数据赚钱</h1>
@@ -257,6 +259,11 @@
     </div>
 
     <!-- 脚本 -->
+    <!-- 下面这个看情况 -->
+    <!--<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>-->
+    <!--<script>-->
+        <!--window.jQuery || document.write('<script src="dist/js/jquery-3.3.1.min.js"><\/script>')-->
+    <!--</script>-->
     <script src="dist/js/wow.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
