--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
                 <div class="b8-row visible-xs">
                     <div class="nav-list-phone-wrap">
-                        <a class="nav-menu" href="javascript:;">
+                        <a id="jsNavMenu" class="nav-menu" href="javascript:;">
                             <div class="icon-menu">
                                 <div class="icon-bar"></div>
                                 <div class="icon-bar"></div>
